--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-  <div id="root"></div>
-  <script src="http://pv.sohu.com/cityjson?ie=utf-8"></script> 
+  <div id="root" style="height: 100vh;"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
