--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
   <div id="root" style="height: 100vh;"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <!-- <script type="module" src="/src/assets/js/web3.min.js"></script> -->
+  <!-- <script type="module" src="/src/assets/js/contractRequestUtils.js"></script> -->
+  
 </body>
 
 </html>
